updated build scripts

--- a/akka-concurrency/Makefile.inc
+++ b/akka-concurrency/Makefile.inc
@@ -49,12 +49,19 @@ endif
 AKKA_VERSION = 2.9.1
 ## https://mvnrepository.com/artifact/com.typesafe/config
 CONFIG_VERSION = 1.4.2
+## https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+SLF4J_VERSION = 2.0.13
 
-SCALA_LIB_JAR   = $(shell $(FIND) "$(LOCAL_REPO)/org/scala-lang" -name "scala-library-2.13.*.jar" | tail -1)
-CONFIG_JAR      = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name "config-$(CONFIG_VERSION).jar")
-AKKA_ACTOR_JAR  = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name "akka-actor_2.13-$(AKKA_VERSION).jar")
+SCALA_LIB_JAR    = $(shell $(FIND) "$(LOCAL_REPO)/org/scala-lang" -name "scala-library-2.13.*.jar" | tail -1)
+CONFIG_JAR       = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name "config-$(CONFIG_VERSION).jar")
+AKKA_ACTOR_JAR   = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name "akka-actor_2.13-$(AKKA_VERSION).jar")
+AKKA_SLF4J_JAR   = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name "akka-slf4j_2.13-$(AKKA_VERSION).jar")
+SLF4J_API_JAR    = $(shell $(FIND) "$(LOCAL_REPO)/org/slf4j" -name "slf4j-api-$(SLF4J_VERSION).jar")
+SLF4J_SIMPLE_JAR = $(shell $(FIND) "$(LOCAL_REPO)/org/slf4j" -name "slf4j-simple-$(SLF4J_VERSION).jar")
 
-deps:
+deps: maven_deps akka_deps
+
+maven_deps:
 	$(eval MVN_OPTS := -quiet)
 	$(eval REMOTE_REPO := https://repo1.maven.org/maven2)
 	$(eval WGET_OPTS := --user-agent="Mozilla/5.0 (Windows NT 6.3; WOW64; rv:40.0)" --no-check-certificate --directory-prefix="$(TMP)")
@@ -62,7 +69,7 @@ deps:
 ifeq (,$(wildcard $(SCALA_LIB_JAR)))
 	$(eval GROUP_ID := org.scala-lang)
 	$(eval ARTIFACT_ID := scala-library)
-	$(eval VERSION := 2.13.12)
+	$(eval VERSION := 2.13.13)
 	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(VERSION).jar)
 	$(eval URL := $(REMOTE_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
 	$(WGET) $(WGET_OPTS) $(URL) || $(error Failed to download $(ARTIFACT_ID)-$(VERSION).jar)
@@ -73,19 +80,61 @@ ifeq (,$(wildcard $(CONFIG_JAR)))
 	$(eval GROUP_ID := com.typesafe)
 	$(eval ARTIFACT_ID := config)
 	$(eval VERSION := $(CONFIG_VERSION))
-	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(SCALA_VERSION).jar)
+	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(CONFIG_VERSION).jar)
 	$(eval URL := $(REMOTE_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
 	$(WGET) $(WGET_OPTS) $(URL) || $(error Failed to download $(ARTIFACT_ID)-$(VERSION).jar)
 	$(MVN) $(MVN_OPTS) install:install-file -Dfile="$(JAR_FILE)" -DgroupId=$(GROUP_ID) -DartifactId=$(ARTIFACT_ID) -Dversion=$(VERSION) -Dpackaging=jar
 	$(eval CONFIG_JAR := $(shell $(FIND) "$(LOCAL_REPO)/$(subst .,/,$(GROUP_ID))" -name $(ARTIFACT_ID)-$(VERSION).jar))
 endif
+ifeq (,$(wildcard $(SLF4J_API_JAR)))
+	$(eval GROUP_ID := org.slf4j)
+	$(eval ARTIFACT_ID := slf4j-api)
+	$(eval VERSION := $(SLF4J_VERSION))
+	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(SLF4J_VERSION).jar)
+	$(eval URL := $(REMOTE_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
+	$(WGET) $(WGET_OPTS) $(URL) || $(error Failed to download $(ARTIFACT_ID)-$(VERSION).jar)
+	$(MVN) $(MVN_OPTS) install:install-file -Dfile="$(JAR_FILE)" -DgroupId=$(GROUP_ID) -DartifactId=$(ARTIFACT_ID) -Dversion=$(VERSION) -Dpackaging=jar
+	$(eval SLF4J_API_JAR := $(shell $(FIND) "$(LOCAL_REPO)/$(subst .,/,$(GROUP_ID))" -name $(ARTIFACT_ID)-$(VERSION).jar))
+endif
+ifeq (,$(wildcard $(SLF4J_SIMPLE_JAR)))
+	$(eval GROUP_ID := org.slf4j)
+	$(eval ARTIFACT_ID := slf4j-simple)
+	$(eval VERSION := $(SLF4J_VERSION))
+	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(SLF4J_VERSION).jar)
+	$(eval URL := $(REMOTE_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
+	$(WGET) $(WGET_OPTS) $(URL) || $(error Failed to download $(ARTIFACT_ID)-$(VERSION).jar)
+	$(MVN) $(MVN_OPTS) install:install-file -Dfile="$(JAR_FILE)" -DgroupId=$(GROUP_ID) -DartifactId=$(ARTIFACT_ID) -Dversion=$(VERSION) -Dpackaging=jar
+	$(eval SLF4J_SIMPLE_JAR := $(shell $(FIND) "$(LOCAL_REPO)/$(subst .,/,$(GROUP_ID))" -name $(ARTIFACT_ID)-$(VERSION).jar))
+endif
+
+:akka_deps
+	$(eval MVN_OPTS := -quiet)
+	$(eval AKKA_REPO := https://repo.akka.io/maven)
+	$(eval WGET_OPTS := --user-agent="Mozilla/5.0 (Windows NT 6.3; WOW64; rv:40.0)" --no-check-certificate --directory-prefix="$(TMP)")
+	@$(ECHO) "## Check Maven dependencies on $(AKKA_REPO)"
 ifeq (,$(wildcard $(AKKA_ACTOR_JAR)))
 	$(eval GROUP_ID := com.typesafe)
 	$(eval ARTIFACT_ID := akka-actor_2.13)
 	$(eval VERSION := $(AKKA_VERSION))
 	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(SCALA_VERSION).jar)
-	$(eval URL := $(REMOTE_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
+	$(eval URL := $(AKKA_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
 	$(WGET) $(WGET_OPTS) $(URL) || $(error Failed to download $(ARTIFACT_ID)-$(VERSION).jar)
 	$(MVN) $(MVN_OPTS) install:install-file -Dfile="$(JAR_FILE)" -DgroupId=$(GROUP_ID) -DartifactId=$(ARTIFACT_ID) -Dversion=$(VERSION) -Dpackaging=jar
 	$(eval AKKA_ACTOR_JAR := $(shell $(FIND) "$(LOCAL_REPO)/$(subst .,/,$(GROUP_ID))" -name $(ARTIFACT_ID)-$(VERSION).jar))
 endif
+ifeq (,$(wildcard $(AKKA_SLF4J_JAR)))
+	$(eval GROUP_ID := com.typesafe)
+	$(eval ARTIFACT_ID := akka-slf4j_2.13)
+	$(eval VERSION := $(AKKA_VERSION))
+	$(eval JAR_FILE := $(TMP)/$(ARTIFACT_ID)-$(SCALA_VERSION).jar)
+	$(eval URL := $(AKKA_REPO)/$(subst .,/,$(GROUP_ID))/$(ARTIFACT_ID)/$(VERSION)/$(ARTIFACT_ID)-$(VERSION).jar)
+	$(WGET) $(WGET_OPTS) $(URL) || $(error Failed to download $(ARTIFACT_ID)-$(VERSION).jar)
+	$(MVN) $(MVN_OPTS) install:install-file -Dfile="$(JAR_FILE)" -DgroupId=$(GROUP_ID) -DartifactId=$(ARTIFACT_ID) -Dversion=$(VERSION) -Dpackaging=jar
+	$(eval AKKA_SLF4J_JAR := $(shell $(FIND) "$(LOCAL_REPO)/$(subst .,/,$(GROUP_ID))" -name $(ARTIFACT_ID)-$(VERSION).jar))
+endif
+
+##############################################################################
+## phony
+
+.PHONY: deps maven_deps akka_deps
+
