--- a/akka-concurrency/common.gradle
+++ b/akka-concurrency/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.2-RC1"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.3"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -24,7 +24,7 @@ project.ext {
     // https://mvnrepository.com/artifact/org.specs2/specs2-core
     akkaVersion = "2.9.1"
     configVersion = "1.4.2"
-    logbackVersion = "1.4.14"
+    logbackVersion = "1.5.5"
     specs2Version = isScala3 ? "5.5.1" : "4.20.4"
     dependencies {
         if (isScala3) {
