--- a/akka-cookbook/common.gradle
+++ b/akka-cookbook/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.2-RC3"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.3"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -26,10 +26,10 @@ project.ext {
     // https://mvnrepository.com/artifact/org.scalatest/scalatest
     // https://mvnrepository.com/artifact/org.scalatest/scalatest-core
     // https://mvnrepository.com/artifact/org.specs2/specs2-core
-    akkaVersion = "2.9.1"
+    akkaVersion = "2.9.4"
     configVersion = "1.4.3"
-    logbackVersion = "1.4.14"
-    specs2Version = isScala3 ? "5.5.1" : "4.20.4"
+    logbackVersion = "1.5.6"
+    specs2Version = isScala3 ? "5.5.3" : "4.20.8"
     dependencies {
         if (isScala3) {
             implementation "org.scala-lang:scala3-compiler_3:$scalaVersion"
