--- a/alexandreesl-examples/common.gradle
+++ b/alexandreesl-examples/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.3"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -17,9 +17,10 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.5"
-    logbackVersion = "1.4.11"
-    specs2Version = isScala3 ? "5.3.2" : "4.20.2"
+    akkaVersion = "2.9.4"
+    configVersion = "1.4.3"
+    logbackVersion = "1.5.6"
+    specs2Version = isScala3 ? "5.5.3" : "4.20.8"
     dependencies {
         if (isScala3) {
             implementation "org.scala-lang:scala3-compiler_3:$scalaVersion"
@@ -27,7 +28,7 @@ project.ext {
         else {
             implementation "org.scala-lang:scala-compiler:$scalaVersion"
         }
-        implementation "com.typesafe:config:1.4.3"
+        implementation "com.typesafe:config:$configVersion"
         implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
         // test scope
         testImplementation 'ch.qos.logback:logback-classic:$logbackVersion'
