--- a/pekko-examples/ChatRoom/Makefile
+++ b/pekko-examples/ChatRoom/Makefile
@@ -11,7 +11,7 @@ SOURCE_DIR  = src
 TARGET_DIR  = target
 CLASSES_DIR = $(TARGET_DIR)/classes
 
-CPATH       = $(SCALA_LIB_JAR)$(PSEP)$(CONFIG_JAR)$(PSEP)$(AKKA_ACTOR_JAR)$(PSEP)$(AKKA_ACTOR_TYPED_JAR)$(PSEP)$(AKKA_SLF4J_JAR)$(PSEP)$(SLF4J_API_JAR)$(PSEP)$(SLF4J_SIMPLE_JAR)$(PSEP)$(CLASSES_DIR)
+CPATH       = $(SCALA_LIB_JAR)$(PSEP)$(CONFIG_JAR)$(PSEP)$(PEKKO_ACTOR_JAR)$(PSEP)$(PEKKO_ACTOR_TYPED_JAR)$(PSEP)$(PEKKO_SLF4J_JAR)$(PSEP)$(SLF4J_API_JAR)$(PSEP)$(SLF4J_SIMPLE_JAR)$(PSEP)$(CLASSES_DIR)
 SCALAC_FLAGS = -deprecation -feature -classpath "$(CPATH)"
 SCALA_FLAGS  = -classpath "$(CPATH)"
 
@@ -25,7 +25,7 @@ TARGET    = $(TARGET_DIR)/.latest-build
 OPTS_FILE    = $(TARGET_DIR)/scalac_opts.txt
 SOURCES_FILE = $(TARGET_DIR)/scalac_sources.txt
 
-MAIN_CLASS = akka.examples.ReceptionistApp
+MAIN_CLASS = Main
 MAIN_ARGS ?= 
 
 all: build
