--- a/examples/common.gradle
+++ b/examples/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.3"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.4-RC1"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -26,7 +26,7 @@ project.ext {
     // https://mvnrepository.com/artifact/org.scalatest/scalatest
     // https://mvnrepository.com/artifact/org.scalatest/scalatest-core
     // https://mvnrepository.com/artifact/org.specs2/specs2-core
-    akkaVersion = "2.9.4"
+    akkaVersion = "2.9.5"
     configVersion = "1.4.3"
     logbackVersion = "1.4.14"
     specs2Version = isScala3 ? "5.5.3" : "4.20.8"
