--- a/akka-cookbook/ivy.xml
+++ b/akka-cookbook/ivy.xml
@@ -10,14 +10,14 @@
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency org="log4j" name="log4j" rev="1.2.17"/>
         
-        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.3.4-RC4 -->
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.3.4-RC4"/>
-        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.3.4-RC4"/>
-        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.3.4-RC4"/>
-        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.3.4-RC4"/>
-        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.3.4-RC4"/>
-        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.3.4-RC4"/>
-        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.3.4-RC4"/>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.3.4 -->
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.3.4"/>
+        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.3.4"/>
+        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.3.4"/>
+        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.3.4"/>
+        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.3.4"/>
+        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.3.4"/>
+        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.3.4"/>
         <dependency org="org.jline" name="jline-reader" rev="3.25.1"/>
         <dependency org="org.jline" name="jline-terminal" rev="3.25.1"/>
         <dependency org="org.jline" name="jline-terminal-jna" rev="3.25.1"/>
@@ -29,8 +29,8 @@
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
         <dependency org="com.typesafe" name="config" rev="1.4.3"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.9.5"/>
+        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.10.0"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
-        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.9.5"/>
+        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.10.0"/>
     </dependencies>
 </ivy-module>
