--- a/effective-akka/common.gradle
+++ b/effective-akka/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.4"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.5-RC1"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -23,7 +23,7 @@ project.ext {
     // https://mvnrepository.com/artifact/org.scalatest/scalatest-core
     akkaVersion = "2.10.0"
     configVersion = "1.4.3"
-    logbackVersion = "1.5.12"
+    logbackVersion = "1.5.16"
     scalatestVersion = "3.2.19"
     dependencies {
         if (isScala3) { 
