--- a/akka-concurrency/ivy.xml
+++ b/akka-concurrency/ivy.xml
@@ -10,29 +10,27 @@
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency org="log4j" name="log4j" rev="1.2.17"/>
         
-        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.3.5-RC1 -->
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.3.5-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.3.5-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.3.5-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.3.5-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.3.5-RC1"/>
-        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.3.5-RC1"/>
-        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.3.5-RC1"/>
-        <dependency org="org.jline" name="jline-native" rev="3.27.0"/>
-        <dependency org="org.jline" name="jline-reader" rev="3.27.0"/>
-        <dependency org="org.jline" name="jline-terminal" rev="3.27.0"/>
-        <dependency org="org.jline" name="jline-terminal-jna" rev="3.27.0"/>
-        <!-- see note on https://github.com/retronym/jline3#jansi-vs-jna -->
-        <dependency org="net.java.dev.jna" name="jna" rev="5.15.0"/>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.3.5-RC3 -->
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.3.5-RC3"/>
+        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.3.5-RC3"/>
+        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.3.5-RC3"/>
+        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.3.5-RC3"/>
+        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.3.5-RC3"/>
+        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.3.5-RC3"/>
+        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.3.5-RC3"/>
+        <dependency org="org.jline" name="jline-native" rev="3.27.1"/>
+        <dependency org="org.jline" name="jline-reader" rev="3.27.1"/>
+        <dependency org="org.jline" name="jline-terminal" rev="3.27.1"/>
+        <dependency org="org.jline" name="jline-terminal-jni" rev="3.27.1"/>
         <dependency org="org.scala-lang" name="scala-library" rev="2.13.15"/>
         <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-asm -->
         <dependency org="org.scala-lang.modules" name="scala-asm" rev="9.7.0-scala-1"/>
 
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
         <dependency org="com.typesafe" name="config" rev="1.4.3"/>
-        <!-- https://doc.akka.io/docs/akka-dependencies/current/#akka-core- -->
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
         <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.10.0"/>
-        <!-- https://doc.akka.io/docs/akka-dependencies/current/#akka-core- -->
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
         <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.10.0"/>
     </dependencies>
 </ivy-module>
