updated .md files

--- a/akka-concurrency/common.gradle
+++ b/akka-concurrency/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.4-RC4"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.5"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -23,9 +23,9 @@ project.ext {
     // https://mvnrepository.com/artifact/org.scalatest/scalatest
     // https://mvnrepository.com/artifact/org.scalatest/scalatest-core
     // https://mvnrepository.com/artifact/org.specs2/specs2-core
-    akkaVersion = "2.9.5"
+    akkaVersion = "2.10.2"
     configVersion = "1.4.3"
-    logbackVersion = "1.5.10"
+    logbackVersion = "1.5.17"
     specs2Version = isScala3 ? "5.5.8" : "4.20.8"
     dependencies {
         if (isScala3) {
